<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_screen"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/home_screen" />
        <item
            android:id="@+id/distance_screen"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/distance_screen" />
        <item
            android:id="@+id/speed_screen"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/speed_screen" />
        <item
            android:id="@+id/altitude_screen"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/altitude_screen" />

        <item
            android:id="@+id/track_list_screen"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/tracklist" />
        <item
            android:id="@+id/exit_from_app"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit_from_app" />
    </group>
</menu>