<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.TrackInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/track_date"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/start_time"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/end_time"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/duration_time"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/active_time"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoActiveTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/track_length"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/average_speed_info"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoAverageSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/max_speed_info"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoMaxSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/min_altitude_info"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoMinAltitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/custom_border_dark"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textAlignment="gravity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="4dp"
                android:text="@string/max_altitude_info"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInfoMaxAltitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:fontFamily="@font/changa_extralight"
                android:paddingStart="6dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnInfoSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnInfoMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:text="@string/map" />

            <Button
                android:id="@+id/btnInfoCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@drawable/custom_border_light"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>